# FFmpegScheduler

./: .gitignore  CMakeLists.txt  FFmpegScheduler.sln  README.md
FFmpegScheduler/: Arguments.cpp  Arguments.h  CMakeLists.txt  Combine.h  Convert.h  FFmpegScheduler.vcxproj  FFmpegScheduler.vcxproj.filters  File.h  Log.h  Preset.h  Preset.hpp  Semaphore.cpp  Semaphore.h  String.h  Unified.h  main.cpp
